--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "sub"]
-	url = https://github.com/acheong08/totallynotsuspicious.git
-	path = "sub"
+	url = https://github.com/cylin577/totallysuspicious.git
+	path = "sub
+"
